--- a/index.html
+++ b/index.html
@@ -565,6 +565,7 @@
     .coming-card:hover {
       transform: translateY(-5px);
       box-shadow: var(--shadow);
+      background-color: aqua;
     }
     
     .coming-icon {
