--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta name="google-site-verification" content="kGfA3MHKVGuGYzsDIcoSCHYMGx5rGsUX6TN0emBrEao">
-     <meta name="msvalidate.01" content="43EDB77F9317A9703FCEE25FB931A0EB" />
+     <meta name="msvalidate.01" content="43EDB77F9317A9703FCEE25FB931A0EB">
     
      <!-- Primary Meta Tags -->
      <title>NSHUTI Emmanuel – IT Student Portfolio | Rubavu, Rwanda</title>
