--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
     /* ----- home page styles ----- */
     .hero {
       padding-top: 120px;
-      background: linear-gradient(135deg,
-          var(--light-color) 0%,
-          var(--background-color) 100%);
+      background: linear-gradient(135deg, var(--light-color) 0%, var(--background-color) 100%);
       min-height: 100vh;
       display: flex;
       align-items: center;
