--- a/index.html
+++ b/index.html
@@ -16,15 +16,12 @@
      <meta property="og:image" content="https://i.ibb.co/gFvPc4HS/Nshuti-png.jpg">
      <meta property="og:url" content="https://nshutiemmanuel860-coder.github.io/My-real-portfolio/">
      <meta property="og:type" content="website">
+     <meta property="og:site_name" content="NSHUTI Emmanuel Portfolio">
 
      <meta name="twitter:card" content="summary_large_image">
      <meta name="twitter:title" content="NSHUTI Emmanuel | IT Student & Web Developer">
      <meta name="twitter:description" content="Explore my projects and skills in software development and cybersecurity.">
      <meta name="twitter:image" content="https://i.ibb.co/gFvPc4HS/Nshuti-png.jpg">
-
-     <meta property="og:see_also" content="https://www.instagram.com/nshuti__wagakira/">
-     <meta property="og:see_also" content="https://www.linkedin.com/in/nshutiemmanuel/">
-     <meta property="og:see_also" content="https://x.com/EmmanuelNs16932">
 
      <link rel="me" href="https://www.instagram.com/nshuti__wagakira/">
      <link rel="me" href="https://www.linkedin.com/in/nshutiemmanuel/">
@@ -1075,7 +1072,7 @@
       <div class="container">
         <h2>My Location</h2>
         <div class="map-container">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d186308.68892068812!2d30.08453556851894!3d-1.962971679687637!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19db58765a77c147%3A0xa615a944d8b1d663!2sKing%20David%20Academy!5e0!3m2!1sen!2srw!4v1771867941609!5m2!1sen!2srw" width="1000" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe title="King David Academy Location on Google Maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d186308.68892068812!2d30.08453556851894!3d-1.962971679687637!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19db58765a77c147%3A0xa615a944d8b1d663!2sKing%20David%20Academy!5e0!3m2!1sen!2srw!4v1771867941609!5m2!1sen!2srw" width="1000" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </div>
   </section>
