--- a/index.html
+++ b/index.html
@@ -988,7 +988,7 @@
           </div>
           <div class="project-card">
             <div class="project-img">
-              <img src="APEX screenshot.png" alt="APEX Website Screenshot">
+              <img src="apex-website.png"  alt="APEX Website – Responsive HTML CSS JavaScript Project" loading="lazy">
             </div>
             <div class="project-info">
               <h3>APEX Website</h3>
