--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
      <meta http-equiv="X-Frame-Options" content="DENY">
      <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
     
-     <link rel="icon" href="target.gif">
+     <link rel="icon" class="icon" href="target.gif">
      <link rel="preconnect" href="https://cdnjs.cloudflare.com">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
      <link rel="stylesheet" href="style.css">
@@ -76,8 +76,7 @@
     "https://github.com/nshutiemmanuel860-coder/",
     "https://www.linkedin.com/in/nshutiemmanuel/",
     "https://www.instagram.com/nshuti__wagakira/"
-  ],
-  "inLanguage": "en"
+  ]
 }
      </script>
   <style>
