--- a/index.html
+++ b/index.html
@@ -811,18 +811,18 @@
         <div class="hero-text">
           <h1>Nshuti Emmanuel</h1>
           <h3>IT Student & Aspiring <span class="typing-container"><span id="typing-text"></span></span></h3>
-          <p>
+          <pre>
             I am a passionate IT student at King David Academy with expertise
             in programming languages like C++ and C, web development with
             HTML, CSS, JavaScript, and cybersecurity. Based in Rubavu, Rwanda,
             I'm dedicated to becoming a skilled software developer and ethical
             hacker.
-          </p>
-          <p>
+          </pre>
+          <pre>
             My journey in technology started with curiosity about how software
             works, and now I'm pursuing it seriously to solve real-world
             problems through secure and efficient software solutions.
-          </p>
+          </pre>
           <div class="hero-btns">
             <a href="#projects" class="btn">View My Work</a>
             <a href="#contact" class="btn btn-secondary">Contact Me</a>
@@ -830,7 +830,7 @@
         </div>
         <div class="hero-image">
           <div class="profile-image-container">
-            <img src="Nshuti8.jpg"alt="NSHUTI Emmanuel – IT Student and Web Developer in Rwanda" loading="lazy"width="400" height="400" class="profile-image"
+            <img src="Nshuti8.jpg" alt="NSHUTI Emmanuel – IT Student and Web Developer in Rwanda" loading="lazy"width="400" height="400" class="profile-image"
               onerror="  this.style.display = 'none'; this.nextElementSibling.style.display = 'flex'; ">
             <div class="image-fallback" style="display: none">
               <i class="fas fa-user"></i>
