--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
      <meta name="msvalidate.01" content="43EDB77F9317A9703FCEE25FB931A0EB">
     
      <title>Nshuti Emmanuel | IT Student & Web Developer in Rwanda</title>
-     <link rel="canonical" href="https://nshutiemmanuel860-coder.github.io/My-real-portfolio/">
+     <link rel="canonical" href="https://emmynshuti1.github.io/My-real-portfolio/">
      <meta name="description" content="Nshuti Emmanuel is an IT student and aspiring software developer in Rwanda specializing in C++, web development, and cybersecurity. View projects and contact information.">
      <meta name="author" content="NSHUTI Emmanuel">
 
@@ -1139,4 +1139,5 @@
   </div>
   <script src="script.js" defer></script>
 </body>
+
 </html>
