--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      <meta property="og:title" content="NSHUTI Emmanuel | IT Student & Web Developer in Rwanda">
      <meta property="og:description" content="Explore projects and skills in C++, web development, and cybersecurity.">
      <meta property="og:image" content="https://i.ibb.co/gFvPc4HS/Nshuti-png.jpg">
-     <meta property="og:url" content="https://nshutiemmanuel860-coder.github.io/My-real-portfolio/">
+     <meta property="og:url" content="https://emmynshuti1.github.io/My-real-portfolio/">
      <meta property="og:type" content="website">
      <meta property="og:site_name" content="NSHUTI Emmanuel Portfolio">
 
@@ -1141,4 +1141,5 @@
 </body>
 
 </html>
+
 
